--- a/compiladorVerano/nbproject/private/private.properties
+++ b/compiladorVerano/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Jos\u00e9 Alberto\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\juanjesuspadrondiaz\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
